@@ -71,6 +71,8 @@ Dialplan Functions
  * Added LOCAL_PEEK, which I have no idea how to use, but Leif Madsen wanted it.
    Russell says it's, like, a scope resolution function for LOCAL variables.
    Totally.  Hopefully, that means more to you than it does to me.
+ * Added AUDIOHOOK_INHERIT. For information on its use, please see the output
+   of "core show function AUDIOHOOK_INHERIT" from the CLI
 
 Applications
 ------------
